style.css
html {
     background-image: url("Images/1838864.jpg");
     background-repeat:no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
}
h1 {
    color: firebrick;
    text-align: center;
    font-size: 70px;
}
p {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 35px;
    color: red;
}

/* Navigation Links */
/* -----------------*/
#link-outer-div {
    text-align: center; 
    width: 100%;
    display: inline-block;
}
.link-inner-div {
    width: 25%;
    float: left;
}
.link-inner-div:after {
    clear: both;
}

/* -----------------*/
#myDIV {
    position: absolute;
    width: 250px;
    height: 100px;
    background-color: black;
    color: orange;
    bottom: 0px;
    animation: mymove 6s infinite;
} 
@keyframes mymove {
    50% {bottom: 300px;}
}
.link-style {
    color: orange;
    text-decoration: none;
    width: 100%;
}
.p-style {
    color: darkgreen;
}
.button {
    border: none;
    color: white;
    padding: 16px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    transition-duration: 0.4s;
    cursor: pointer;
} 
.button1 {
    background-color: white;
    color: black;
    border: 2px solid #4CAF50;
}
.button1:hover {
    background-color: #4CAF50;
    color: white;
}
.button2 {
    background-color: white;
    color: black;
    border: 2px solid #008CBA;
}
.button2:hover {
    background-color: #008CBA;
    color: white;
}
.div-style {
    text-align:left;
    padding-left: 60px;
}

